--- a/动态规划/动态规划相关算法题.md
+++ b/动态规划/动态规划相关算法题.md
@@ -1,6 +1,7 @@
 ---
 title: 动态规划相关算法题
 excerpt: 对动态规划相关算法题的总结
+index_img: /img/leetcode.png
 categories:
 - java算法
 tags:
@@ -8,6 +9,8 @@ tags:
 ---
 
 ### 1.1、[斐波那契数列](https://www.nowcoder.com/practice/c6c7742f5ba7442aada113136ddea0c3?tpId=13&tqId=11160&tPage=1&rp=1&ru=%2Fta%2Fcoding-interviews&qru=%2Fta%2Fcoding-interviews%2Fquestion-ranking)
+
+>大家都知道斐波那契数列，现在要求输入一个整数n，请你输出斐波那契数列的第n项（从0开始，第0项为0，第1项是1）。
 
 ```
 public class T7 {
@@ -29,6 +32,8 @@ public class T7 {
 
 ### 1.2、[跳台阶](https://www.nowcoder.com/practice/8c82a5b80378478f9484d87d1c5f12a4?tpId=13&tqId=11161&tPage=1&rp=1&ru=%2Fta%2Fcoding-interviews&qru=%2Fta%2Fcoding-interviews%2Fquestion-ranking)
 
+>一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法（先后次序不同算不同的结果）。总得还是公式F(N)=F(N-1)+F(N-2)
+
 ```
 public class T8 {
     public int JumpFloor(int target) {
@@ -48,6 +53,8 @@ public class T8 {
 ```
 
 ### 1.3、[矩形覆盖](https://www.nowcoder.com/practice/72a5a919508a4251859fb2cfb987a0e6?tpId=13&tqId=11163&tPage=1&rp=1&ru=%2Fta%2Fcoding-interviews&qru=%2Fta%2Fcoding-interviews%2Fquestion-ranking)
+
+> 我们可以用2乘1的小矩形横着或者竖着去覆盖更大的矩形。请问用n个2乘1的小矩形无重叠地覆盖一个2*n的大矩形，总共有多少种方法？还是公式F(N)=F(N-1)+F(N-2)。
 
 ```
 public class T10 {
@@ -69,10 +76,12 @@ public class T10 {
 
 ### 1.4、[变态跳台阶](https://www.nowcoder.com/practice/22243d016f6b47f2a6928b4313c85387?tpId=13&tqId=11162&tPage=1&rp=1&ru=%2Fta%2Fcoding-interviews&qru=%2Fta%2Fcoding-interviews%2Fquestion-ranking)
 
+>一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法。
+
 ```
 public int JumpFloorII(int target) {
     int[] dp = new int[target];
-    Arrays.fill(dp, 1);
+    Arrays.fill(dp, 1);  //快速填充数组值为1，每层都有直接一步到位的情形
     // 注意起始位置
     for (int i = 1; i < target; i++)
     // 开始跳
@@ -85,7 +94,7 @@ public int JumpFloorII(int target) {
 
 ### 2. 最大子序和(1385)
 
-https://leetcode-cn.com/problems/maximum-subarray/
+>给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
 
 ```
 class Solution {
@@ -107,6 +116,19 @@ class Solution {
 
 ### 3.1、[股票的最大利润](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/description/?utm_source=LCUS&utm_medium=ip_redirect_q_uns&utm_campaign=transfer2china)
 
+>```
+>输入：[7,1,5,3,6,4]
+>输出：5
+>解释：在第 2 天（股票价格 = 1）的时候买入，在第 5 天（股票价格 = 6）的时候卖出，最大利润 = 6-1 = 5 。
+>     注意利润不能是 7-1 = 6, 因为卖出价格需要大于买入价格；同时，你不能在买入前卖出股票。
+>```
+>
+>```
+>输入：prices = [7,6,4,3,1]
+>输出：0
+>解释：在这种情况下, 没有交易完成, 所以最大利润为 0。
+>```
+
 ```
 class Solution {
     public int maxProfit(int[] prices) {
@@ -116,8 +138,8 @@ class Solution {
         // 从1开始
         for (int i = 1; i < prices.length; i++) {
             // 注意保持最小
-            min = prices[i] < min ? prices[i] : min;
-            max = Math.max(max, prices[i] - min);
+            min = prices[i] < min ? prices[i] : min; 
+            max = Math.max(max, prices[i] - min);  //即找出已经出现的最小值，每天都计算利润即可
         }
         return max;
     }
@@ -126,7 +148,22 @@ class Solution {
 
 ### 3.2 买卖股票的最佳时机 II
 
-https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/
+>在上题基础上可以多次交易
+>
+>```
+>输入: [7,1,5,3,6,4]
+>输出: 7
+>解释: 在第 2 天（股票价格 = 1）的时候买入，在第 3 天（股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。
+>     随后，在第 4 天（股票价格 = 3）的时候买入，在第 5 天（股票价格 = 6）的时候卖出, 这笔交易所能获得利润 = 6-3 = 3 。
+>```
+>
+>```
+>输入: [1,2,3,4,5]
+>输出: 4
+>解释: 在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。
+>     注意你不能在第 1 天和第 2 天接连购买股票，之后再将它们卖出。
+>     因为这样属于同时参与了多笔交易，你必须在再次购买前出售掉之前的股票。
+>```
 
 ```
 class Solution {
@@ -143,29 +180,25 @@ class Solution {
 }
 ```
 
-### 3.3 买卖股票的最佳时机含手续费
-
-状态机
-
-```
-class Solution {
-    public int maxProfit(int[] prices, int fee) {
-        if (prices == null || prices.length == 0)
-            return 0;
-            int buy = Integer.MIN_VALUE; // 购买股票后的收益，开始购买第一支股票后肯定是负数
-            int sell = 0; // 售卖第一次股票后
-            for (int i = 0; i < prices.length; i++){
-                buy = Math.max(buy, sell - prices[i]);
-                sell = Math.max(sell, buy + prices[i] - fee); //手续费在交易完成时一次性扣除
-            }   
-            return sell;
-    }
-}
-```
-
 ### 4. 打家劫舍
 
-https://leetcode-cn.com/problems/house-robber/description/
+>你是一个专业的小偷，计划偷窃沿街的房屋。每间房内都藏有一定的现金，影响你偷窃的唯一制约因素就是相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+>
+>给定一个代表每个房屋存放金额的非负整数数组，计算你 不触动警报装置的情况下 ，一夜之内能够偷窃到的最高金额。
+>
+>```
+>输入：[1,2,3,1]
+>输出：4
+>解释：偷窃 1 号房屋 (金额 = 1) ，然后偷窃 3 号房屋 (金额 = 3)。
+>     偷窃到的最高金额 = 1 + 3 = 4 。
+>```
+>
+>```
+>输入：[2,7,9,3,1]
+>输出：12
+>解释：偷窃 1 号房屋 (金额 = 2), 偷窃 3 号房屋 (金额 = 9)，接着偷窃 5 号房屋 (金额 = 1)。
+>     偷窃到的最高金额 = 2 + 9 + 1 = 12 .
+>```
 
 ```
 class Solution {
@@ -184,7 +217,22 @@ class Solution {
 
 ### 5. 打家劫舍 II
 
-https://leetcode-cn.com/problems/house-robber-ii/description/
+>你是一个专业的小偷，计划偷窃沿街的房屋，每间房内都藏有一定的现金。这个地方所有的房屋都 围成一圈 ，这意味着第一个房屋和最后一个房屋是紧挨着的。同时，相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警 。
+>
+>给定一个代表每个房屋存放金额的非负整数数组，计算你 在不触动警报装置的情况下 ，能够偷窃到的最高金额。
+>
+>```
+>输入：nums = [2,3,2]
+>输出：3
+>解释：你不能先偷窃 1 号房屋（金额 = 2），然后偷窃 3 号房屋（金额 = 2）, 因为他们是相邻的。
+>```
+>
+>```
+>输入：nums = [1,2,3,1]
+>输出：4
+>解释：你可以先偷窃 1 号房屋（金额 = 1），然后偷窃 3 号房屋（金额 = 3）。
+>     偷窃到的最高金额 = 1 + 3 = 4 。
+>```
 
 ```
 class Solution {
@@ -210,6 +258,15 @@ class Solution {
 
 ### 6、[剪绳子](https://www.nowcoder.com/practice/57d85990ba5b440ab888fc72b0751bf8?tpId=13&tqId=33257&tPage=4&rp=1&ru=%2Fta%2Fcoding-interviews&qru=%2Fta%2Fcoding-interviews%2Fquestion-ranking)
 
+>给你一根长度为n的绳子，请把绳子剪成整数长的m段（m、n都是整数，n>1并且m>1，m<=n），每段绳子的长度记为k[1],...,k[m]。请问k[1]x...xk[m]可能的最大乘积是多少？例如，当绳子的长度是8时，我们把它剪成长度分别为2、3、3的三段，此时得到的最大乘积是18。
+>
+>```
+>输入
+>8
+>返回值
+>18
+>```
+
 ```
 // 动态规划
 public int integerBreak(int n) {
@@ -226,6 +283,10 @@ public int integerBreak(int n) {
 ```
 
 ### 7、[礼物的最大值](https://www.nowcoder.com/questionTerminal/72a99e28381a407991f2c96d8cb238ab)
+
+>小东所在公司要发年终奖，而小东恰好获得了最高福利，他要在公司年会上参与一个抽奖游戏，游戏在一个6*6的棋盘上进行，上面放着36个价值不等的礼物，每个小的棋盘上面放置着一个礼物，他需要从左上角开始游戏，每次只能向下或者向右移动一步，到达右下角停止，一路上的格子里的礼物小东都能拿到，请设计一个算法使小东拿到价值最高的礼物。
+>
+>给定一个6*6的矩阵**board**，其中每个元素为对应格子的礼物价值,左上角为[0,0],请返回能获得的最大价值，保证每个礼物价值大于100小于1000。
 
 ```
 public int getMost(int[][] values) {
@@ -244,30 +305,20 @@ public int getMost(int[][] values) {
 
 ### 8. 最小路径和
 
-https://leetcode-cn.com/problems/minimum-path-sum/description/
+>给定一个包含非负整数的 `m x n` 网格 `grid` ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+>
+>```
+>输入：grid = [[1,3,1],[1,5,1],[4,2,1]]
+>输出：7
+>解释：因为路径 1→3→1→1→1 的总和最小。
+>```
+>
+>```
+>输入：grid = [[1,2,3],[4,5,6]]
+>输出：12
+>```
 
 ```
-class Solution {
-    public int minPathSum(int[][] grid) {
-        if (grid.length == 0 || grid[0].length == 0) return 0;
-        int m = grid.length, n = grid[0].length;
-        // 优化过后的dp
-        int[] dp = new int[n];
-        for (int i = 0; i < m; i ++) {
-            for (int j = 0; j < n; j++) {
-                if (j == 0)  // 注意
-                    dp[j] = dp[j];
-                else if (i == 0) // 注意
-                    dp[j] = dp[j - 1];
-                else // 注意
-                    dp[j] = Math.min(dp[j], dp[j - 1]);
-                // 别忘了
-                dp[j] += grid[i][j];
-            }
-        }
-        return dp[n-1];
-    }
-}
 class Solution {
     public int minPathSum(int[][] grid) {
         if (grid == null || grid.length == 0 || grid[0].length == 0)
@@ -298,7 +349,26 @@ class Solution {
 
 ### 9. 不同路径
 
-https://leetcode-cn.com/problems/unique-paths/description/
+>一个机器人位于一个 m x n 网格的左上角 （起始点在下图中标记为 “Start” ）。
+>
+>机器人每次只能向下或者向右移动一步。机器人试图达到网格的右下角（在下图中标记为 “Finish” ）。
+>
+>问总共有多少条不同的路径？
+>
+>```
+>输入：m = 3, n = 2
+>输出：3
+>解释：
+>从左上角开始，总共有 3 条路径可以到达右下角。
+>1. 向右 -> 向下 -> 向下
+>2. 向下 -> 向下 -> 向右
+>3. 向下 -> 向右 -> 向下
+>```
+>
+>```
+>输入：m = 7, n = 3
+>输出：28
+>```
 
 ```
 class Solution {
@@ -336,7 +406,26 @@ class Solution {
 
 ### 9.2 不同路径 II
 
-https://leetcode-cn.com/problems/unique-paths-ii/
+>一个机器人位于一个 m x n 网格的左上角 （起始点在下图中标记为“Start” ）。
+>
+>机器人每次只能向下或者向右移动一步。机器人试图达到网格的右下角（在下图中标记为“Finish”）。
+>
+>现在考虑网格中有障碍物。那么从左上角到右下角将会有多少条不同的路径？
+>
+>```
+>输入：obstacleGrid = [[0,0,0],[0,1,0],[0,0,0]]
+>输出：2
+>解释：
+>3x3 网格的正中间有一个障碍物。
+>从左上角到右下角一共有 2 条不同的路径：
+>1. 向右 -> 向右 -> 向下 -> 向下
+>2. 向下 -> 向下 -> 向右 -> 向右
+>```
+>
+>```
+>输入：obstacleGrid = [[0,1],[0,0]]
+>输出：1
+>```
 
 ```
 class Solution {
@@ -407,7 +496,12 @@ class Solution {
 
 ### 9.3 最大正方形
 
-https://leetcode-cn.com/problems/maximal-square/
+>在一个由 `'0'` 和 `'1'` 组成的二维矩阵内，找到只包含 `'1'` 的最大正方形，并返回其面积。
+>
+>```
+>输入：matrix = [["1","0","1","0","0"],["1","0","1","1","1"],["1","1","1","1","1"],["1","0","0","1","0"]]
+>输出：4
+>```
 
 ```
 class Solution {
@@ -438,7 +532,29 @@ class Solution {
 
 ### 10. 解码方法
 
-https://leetcode-cn.com/problems/decode-ways/description/
+>一条包含字母 A-Z 的消息通过以下映射进行了 编码 ：
+>
+>'A' -> 1
+>'B' -> 2
+>...
+>'Z' -> 26
+>要 解码 已编码的消息，所有数字必须基于上述映射的方法，反向映射回字母（可能有多种方法）。例如，"111" 可以将 "1" 中的每个 "1" 映射为 "A" ，从而得到 "AAA" ，或者可以将 "11" 和 "1"（分别为 "K" 和 "A" ）映射为 "KA" 。注意，"06" 不能映射为 "F" ，因为 "6" 和 "06" 不同。
+>
+>给你一个只含数字的 非空 字符串 num ，请计算并返回 解码 方法的 总数 。
+>
+>题目数据保证答案肯定是一个 32 位 的整数。
+>
+>```
+>输入：s = "12"
+>输出：2
+>解释：它可以解码为 "AB"（1 2）或者 "L"（12）。
+>```
+>
+>```
+>输入：s = "226"
+>输出：3
+>解释：它可以解码为 "BZ" (2 26), "VF" (22 6), 或者 "BBF" (2 2 6) 。
+>```
 
 ```
 class Solution {
@@ -472,7 +588,20 @@ class Solution {
 
 ### 11. 最长上升子序列
 
-https://leetcode-cn.com/problems/longest-increasing-subsequence/description/
+>给你一个整数数组 nums ，找到其中最长严格递增子序列的长度。
+>
+>子序列是由数组派生而来的序列，删除（或不删除）数组中的元素而不改变其余元素的顺序。例如，[3,6,2,7] 是数组 [0,3,1,6,2,2,7] 的子序列。
+>
+>```
+>输入：nums = [10,9,2,5,3,7,101,18]
+>输出：4
+>解释：最长递增子序列是 [2,3,7,101]，因此长度为 4 。
+>```
+>
+>```
+>输入：nums = [0,1,0,3,2,3]
+>输出：4
+>```
 
 ```
 class Solution {
@@ -497,7 +626,30 @@ class Solution {
 
 ### 12. 最长公共子序列
 
-https://leetcode-cn.com/problems/longest-common-subsequence/
+>给定两个字符串 text1 和 text2，返回这两个字符串的最长公共子序列的长度。
+>
+>一个字符串的 子序列 是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
+>例如，"ace" 是 "abcde" 的子序列，但 "aec" 不是 "abcde" 的子序列。两个字符串的「公共子序列」是这两个字符串所共同拥有的子序列。
+>
+>若这两个字符串没有公共子序列，则返回 0。
+>
+>```
+>输入：text1 = "abcde", text2 = "ace" 
+>输出：3  
+>解释：最长公共子序列是 "ace"，它的长度为 3。
+>```
+>
+>```
+>输入：text1 = "abc", text2 = "abc"
+>输出：3
+>解释：最长公共子序列是 "abc"，它的长度为 3。
+>```
+>
+>```
+>输入：text1 = "abc", text2 = "def"
+>输出：0
+>解释：两个字符串没有公共子序列，返回 0。
+>```
 
 ```
 class Solution {
@@ -518,11 +670,35 @@ class Solution {
 }
 ```
 
-[参考](https://kanarien.cn/2019/03/24/动态规划：01背包、完全背包、多重背包/)
-
 ### 15. 编辑距离
 
-https://leetcode-cn.com/problems/edit-distance/description/
+>给你两个单词 word1 和 word2，请你计算出将 word1 转换成 word2 所使用的最少操作数 。
+>
+>你可以对一个单词进行如下三种操作：
+>
+>插入一个字符
+>删除一个字符
+>替换一个字符
+>
+>```
+>输入：word1 = "horse", word2 = "ros"
+>输出：3
+>解释：
+>horse -> rorse (将 'h' 替换为 'r')
+>rorse -> rose (删除 'r')
+>rose -> ros (删除 'e')
+>```
+>
+>```
+>输入：word1 = "intention", word2 = "execution"
+>输出：5
+>解释：
+>intention -> inention (删除 't')
+>inention -> enention (将 'i' 替换为 'e')
+>enention -> exention (将 'n' 替换为 'x')
+>exention -> exection (将 'n' 替换为 'c')
+>exection -> execution (插入 'u')
+>```
 
 ```
 class Solution {
