--- a/背包问题/背包问题相关算法题.md
+++ b/背包问题/背包问题相关算法题.md
@@ -182,7 +182,21 @@ public class Main {
 
 #### P1164 小A点菜
 
-https://www.luogu.com.cn/problem/P1164
+>A身上有M元，去餐馆点菜。餐馆有N种，第i种卖ai元。每种菜只有一份。A想要点菜，正好吧身上钱花完，问一共有多少种点菜方法。
+>
+>```
+>输入格式
+>第一行是两个数字，表示N和M。
+>第二行起N个正数ai
+>```
+>
+>```
+>输入
+>4 4
+>1 1 2 2
+>输出
+>3
+>```
 
 ```
 import java.util.Scanner;
@@ -214,7 +228,31 @@ public class Main {
 
 #### P1510 精卫填海
 
-https://www.luogu.com.cn/problem/P1510
+>东海未填平的区域还需要至少体积为v的木石才可以填平，而西山上的木石还剩下n块，每块的体积和把它衔到东海需要的体力分别为k和m。精卫已经填海填了这么长时间了，她也很累了，她还剩下的体力为c。
+>
+>```
+>输入格式
+>输入文件的第一行是三个整数：v、n、c。
+>从第二行到第n+1行分别为每块木石的体积和把它衔到东海需要的体力。
+>```
+>
+>```
+>输入
+>100 2 10
+>50 5
+>50 5
+>输出
+>0
+>```
+>
+>```
+>输入
+>10 2 1
+>50 5
+>10 2
+>输出
+>Impossible
+>```
 
 ```
 import java.util.Scanner;
@@ -255,7 +293,28 @@ public class Main {
 
 #### 找零钱的硬币数组合
 
-https://leetcode-cn.com/problems/coin-change-2/description/
+>给定不同面额的硬币和一个总金额。写出函数来计算可以凑成总金额的硬币组合数。假设每一种面额的硬币有无限个。 
+>
+>```
+>输入: amount = 5, coins = [1, 2, 5]
+>输出: 4
+>解释: 有四种方式可以凑成总金额:
+>5=5
+>5=2+2+1
+>5=2+1+1+1
+>5=1+1+1+1+1
+>```
+>
+>```
+>输入: amount = 3, coins = [2]
+>输出: 0
+>解释: 只用面额2的硬币不能凑成总金额3。
+>```
+>
+>```
+>输入: amount = 10, coins = [10] 
+>输出: 1
+>```
 
 ```
 class Solution {
@@ -275,7 +334,23 @@ class Solution {
 
 #### 分割等和子集
 
-https://leetcode-cn.com/problems/partition-equal-subset-sum/description/
+>给定一个**只包含正整数**的**非空**数组。是否可以将这个数组分割成两个子集，使得两个子集的元素和相等。
+>
+>```
+>输入: [1, 5, 11, 5]
+>
+>输出: true
+>
+>解释: 数组可以分割成 [1, 5, 5] 和 [11].
+>```
+>
+>```
+>输入: [1, 2, 3, 5]
+>
+>输出: false
+>
+>解释: 数组不能分割成两个元素和相等的子集
+>```
 
 0/1背包
 
@@ -304,13 +379,23 @@ class Solution {
 }
 ```
 
-P1417 P1466 P1734
-
 ### 完全背包
 
 #### P1616 疯狂的采药
 
-https://www.luogu.com.cn/problem/P1616
+>输入第一行有两个整数，分别代表总共能够用来采药的时间 t和代表山洞里的草药的数目 m。
+>
+>第 2到第 (m + 1) 行，每行两个整数，第 (i + 1)行的整数 ai, bi 分别表示采摘第 i 种草药的时间和该草药的价值。
+>
+>```
+>输入
+>70 3
+>71 100
+>69 1
+>1 2
+>输出
+>140
+>```
 
 ```
 import java.util.Scanner;
@@ -343,7 +428,37 @@ public class Main {
 
 #### 零钱兑换
 
-https://leetcode-cn.com/problems/coin-change/description/ 完全背包问题
+>给定不同面额的硬币 coins 和一个总金额 amount。编写一个函数来计算可以凑成总金额所需的最少的硬币个数。如果没有任何一种硬币组合能组成总金额，返回 -1。
+>
+>你可以认为每种硬币的数量是无限的。
+>
+>```
+>输入：coins = [1, 2, 5], amount = 11
+>输出：3 
+>解释：11 = 5 + 5 + 1
+>```
+>
+>```
+>输入：coins = [2], amount = 3
+>输出：-1
+>```
+>
+>```
+>输入：coins = [1], amount = 0
+>输出：0
+>```
+>
+>```
+>输入：coins = [1], amount = 1
+>输出：1
+>```
+>
+>```
+>输入：coins = [1], amount = 2
+>输出：2
+>```
+
+完全背包问题
 
 ```
 class Solution {
@@ -371,7 +486,28 @@ class Solution {
 
 #### 单词拆分
 
-https://leetcode-cn.com/problems/word-break/description/
+>给定一个非空字符串 s 和一个包含非空单词的列表 wordDict，判定 s 是否可以被空格拆分为一个或多个在字典中出现的单词。
+>
+>说明：拆分时可以重复使用字典中的单词。
+>你可以假设字典中没有重复的单词。
+>
+>```
+>输入: s = "leetcode", wordDict = ["leet", "code"]
+>输出: true
+>解释: 返回 true 因为 "leetcode" 可以被拆分成 "leet code"。
+>```
+>
+>```
+>输入: s = "applepenapple", wordDict = ["apple", "pen"]
+>输出: true
+>解释: 返回 true 因为 "applepenapple" 可以被拆分成 "apple pen apple"。
+>     注意你可以重复使用字典中的单词。
+>```
+>
+>```
+>输入: s = "catsandog", wordDict = ["cats", "dog", "sand", "and", "cat"]
+>输出: false
+>```
 
 求解顺序的完全背包问题
 
@@ -397,9 +533,36 @@ class Solution {
 
 ### 多重背包
 
-http://acm.hdu.edu.cn/showproblem.php?pid=2191
+>输入数据首先包含一个正整数C，表示有C组测试用例，每组测试用例的第一行是两个整数n和m(1<=n<=100, 1<=m<=100),分别表示经费的金额和大米的种类，然后是m行数据，每行包含3个数p，h和c(1<=p<=20,1<=h<=200,1<=c<=20)，分别表示每袋的价格、每袋的重量以及对应种类大米的袋数。
+>
+>输出为：对于每组测试数据，请输出能够购买大米的最多重量，你可以假设经费买不光所有的大米，并且经费你可以不用完。每个实例的输出占一行。
+>
+>```
+>输入：
+>1
+>8 2
+>2 100 4
+>4 100 2
+>输出：
+>400
+>```
 
-https://www.nowcoder.com/questionTerminal/6ce78d70a25347058004691035d7540b
+>有一个体积为V的背包，有m种物品，每种物品有体积和价值，且数量一定。求背包能装下的最大价值。
+>
+>输入为第一行两个整数V和m。接下来m行，每行3个整数，表示第i种物品的数量、体积和价值。
+>
+>输出为一个整数，表示背包能装下的最大价值。
+>
+>```
+>输入：
+>10 4
+>2 3 2
+>2 4 3
+>1 2 2
+>4 5 3
+>输出：
+>8
+>```
 
 ```
 import java.util.Scanner;
@@ -438,7 +601,33 @@ public class Main {
 
 #### P1507 NASA的食物计划
 
-https://www.luogu.com.cn/problem/P1507
+>航天飞机的体积有限,当然如果载过重的物品,燃料会浪费很多钱,每件食品都有各自的体积、质量以及所含卡路里,在告诉你体积和质量的最大值的情况下,请输出能达到的食品方案所含卡路里的最大值,当然每个食品只能使用一次.
+>
+>输入为：
+>
+>第一行 两个数 体积最大值(<400)和质量最大值(<400)
+>
+>第二行 一个数 食品总数N(<50).
+>
+>第三行－第3+N行
+>
+>每行三个数 体积(<400) 质量(<400) 所含卡路里(<500)
+>
+>输出为：
+>
+>一个数 所能达到的最大卡路里(int范围内)
+>
+>```
+>输入：
+>320 350
+>4
+>160 40 120
+>80 110 240
+>220 70 310
+>40 400 220
+>输出：
+>550
+>```
 
 ```
 import java.util.Scanner;
@@ -477,7 +666,26 @@ public class Main {
 
 #### 1和0
 
-https://leetcode-cn.com/problems/ones-and-zeroes/ 这是一个多维费用的 0-1 背包问题，有两个背包大小，0 的数量和 1 的数量。
+>给你一个二进制字符串数组 strs 和两个整数 m 和 n 。
+>
+>请你找出并返回 strs 的最大子集的大小，该子集中 最多 有 m 个 0 和 n 个 1 。
+>
+>如果 x 的所有元素也是 y 的元素，集合 x 是集合 y 的 子集 。
+>
+>```
+>输入：strs = ["10", "0001", "111001", "1", "0"], m = 5, n = 3
+>输出：4
+>解释：最多有 5 个 0 和 3 个 1 的最大子集是 {"10","0001","1","0"} ，因此答案是 4 。
+>其他满足题意但较小的子集包括 {"0001","1"} 和 {"10","1","0"} 。{"111001"} 不满足题意，因为它含 4 个 1 ，大于 n 的值 3 。
+>```
+>
+>```
+>输入：strs = ["10", "0", "1"], m = 1, n = 1
+>输出：2
+>解释：最大的子集是 {"0", "1"} ，所以答案是 2 。
+>```
+
+这是一个多维费用的 0-1 背包问题，有两个背包大小，0 的数量和 1 的数量。
 
 ```
 class Solution {
