--- a/笔试题/笔试集锦.md
+++ b/笔试题/笔试集锦.md
@@ -106,3 +106,128 @@ public class Solution {
     }
 }
 ```
+
+
+
+## 约瑟夫环
+
+一行代码解决约瑟夫环问题
+
+```
+int f(int n, int m){
+    return n == 1 ? n : (f(n - 1, m) + m - 1) % n + 1;
+}
+```
+
+
+
+## 动态规划解
+
+>最大子序和
+>
+>给定一个整数数组，找出一个具有最大和的连续子数组，返回最大和。
+>
+>输入: [-2,1,-3,4,-1,2,1,-5,4],输出: 6解释: 连续子数组 [4,-1,2,1] 的和最大，为 6。
+>
+>分析：问题拆解为两种即i 这个位置的元素自成一个子数组;
+>
+>i 位置的元素的值 + **以 i – 1 结尾的所有子数组中的子数组和最大的值**。
+>
+>得到位置i的最大和递推方程：dp[i] = Math.max(dp[i - 1] + array[i], array[i])
+
+```
+public int maxSubArray(int[] nums) {
+    if (nums == null || nums.length == 0) {
+        return 0;
+    }
+
+    int n = nums.length;
+
+    int[] dp = new int[n];
+
+    dp[0] = nums[0];
+
+    int result = dp[0];
+
+    for (int i = 1; i < n; ++i) {
+        dp[i] = Math.max(dp[i - 1], 0) + nums[i];
+        result = Math.max(result, dp[i]);
+    }
+
+    return result;
+}
+```
+
+爬楼梯
+
+```
+public class Solution {
+    public int climbStairs(int n) {
+        int[] dp = new int[n+1];
+        if(n==0){
+          return 0;  //爬楼梯考虑后面数组可能越界的情况
+        }
+        if(n==1){
+          return 1;  //爬楼梯考虑后面数组可能越界的情况
+        }
+        dp[0] =0;
+        dp[1] = 1;
+        dp[2] = 2;
+        for(int i =3;i<=n;i++){
+          
+          dp[i] = dp[i-1]+dp[i-2];
+        }
+        return dp[n];
+    }
+}
+```
+
+
+
+>最小路径和
+>
+>给定一个只含非负整数的m*n网格，找到一条从左上角到右下角的可以使数字和最小的路径。
+>
+>```
+>输入:  [[1,3,1],[1,5,1],[4,2,1]]
+>输出: 7	
+>样例解释：
+>路线为： 1 -> 3 -> 1 -> 1 -> 1。
+>```
+
+```
+public class Solution {
+
+    public int minPathSum(int[][] grid) {
+
+        //若为空直接返回
+        if (grid == null) {
+            return 0;
+        }
+
+        int m = grid.length;
+        int n = grid[0].length;
+        int[][] f = new int[m][n];
+
+        // 初始化 ,第一行，第一列
+        f[0][0] = grid[0][0];
+        for (int i = 1; i < m; i++) {
+            f[i][0] = f[i - 1][0] + grid[i][0];
+        }
+        for (int j = 1; j < n; j++) {
+            f[0][j] = f[0][j - 1] + grid[0][j];
+        }
+
+        //状态转移
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                f[i][j] = Math.min(f[i - 1][j], f[i][j - 1]) + grid[i][j];
+            }
+        }
+
+        //返回结果
+        return f[m - 1][n - 1];
+    }
+}
+```
+
