--- a/笔试题/笔试集锦.md
+++ b/笔试题/笔试集锦.md
@@ -231,3 +231,66 @@ public class Solution {
 }
 ```
 
+
+
+## N人过桥问题
+
+>n个人要晚上过桥，在任何时候最多两个人一组过桥，每组要有一只手电筒。在这n个人中只有一个手电筒能用，求这些人过桥所用的最短时间。
+>
+>```
+>输入的第一行给出n,接下来的n行给出每个人的过桥时间
+>5
+>1 2 3 4 5
+>去： 1, 2
+>回： 1
+>去： 4, 5
+>回： 2
+>去： 1, 3
+>回： 1
+>去： 1, 2
+>最短时间： 16
+>```
+
+>分析
+>
+>有两种情况过桥，比较。
+>
+>只计算n和n-1过桥时间。
+>
+>### 方案一：用最快的成员nums[1]传递手电筒帮助最慢的nums[n]和nums[n-1]过桥，易知来回所用的时间为：2*nums[1]+nums[n]+nums[n-1]。
+>
+>### 方案二：用最快的成员nums[1]和次快的成员nums[2]传递手电筒帮助最慢的nums[n]和nums[n-1]过桥。来回时间为：2*nums[2]+nums[n]+nums[1]。
+
+```
+public class Test {
+
+    public static void main(String[] args) {
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt(); // 读取人数
+        int[] nums = new int[n+1];
+        Arrays.sort(nums);
+        for (int i = 1; i <= n; i++) {
+            nums[i] = sc.nextInt();
+        }
+        int result = 0;
+        int stay = n;
+        while(stay > 3){
+            if(nums[1] + nums[stay-1] > 2*nums[2]) {
+                // 第二种方案
+                result += 2*nums[2] + nums[stay] + nums[1];
+            } else {
+                // 第一种方案
+                result += 2*nums[1] + nums[stay] + nums[stay-1];
+            }
+            stay -= 2;
+        }
+        if (stay == 3){
+            result += (nums[1] + nums[2] + nums[3]);
+        } else {
+            result += (nums[2]);
+        }
+        System.out.println("最短时间： " + result);
+    }
+}
+```
+
